# machinesetuptool

./: AUTHORS  Makefile.am  README  configure.ac  defaults  setup.in
config/: Makefile.am  README
config/sample/mymachine/: asound.conf  mymachine.vars  network.interfaces
scripts/: Makefile.am  detect-machine  machine-selection-menu.in  machinesetuptool.in
